Attempt to fix Membrane linking